- Changes to css - Added animations - Basic code changes - Footer css added (not finished) - new font added / removed

--- a/src/index.html
+++ b/src/index.html
@@ -37,48 +37,56 @@
 
     <div class="overlay-menu">
       <ul id="menu">
-        <li><a class="a" href="#home">Work</a></li>
-        <li><a class="a" href="#services">Services</a></li>
-        <li><a class="a" href="#about">About</a></li>
-        <li><a class="a" href="#contact">Contact</a></li>
+        <li><a class="a" href="#home">WORK</a></li>
+        <li><a class="a" href="#services">SERVICES</a></li>
+        <li><a class="a" href="#about">ABOUT</a></li>
+        <li><a class="a" href="#contact">CONTACT</a></li>
       </ul>
     </div>
     </header>
     <section class="banner">
       <h1 class="hero">WE
           <span style="color: #39DBFA">CREATE</span>
-          <span style="color: #FF2D5E">BEAUTIFUL</span>,
+          <span style="color: #FF2D5E">BEAUTIFUL,</span>
           <span style="color: #82F927">INTUITIVE</span>
-          <br>DESIGNS AND EXPERIENCES
+          <br>DESIGNS AND EXPERIENCES.
           <br><div class="banimg"><img src="images/tablets.svg"/></div></h1>
+    </section>
+    <section class="mouse">
+      <div class="shape"></div>
+      <div class="shape2"></div>
+      <div class="scroll-downs">
+        <div class="mousey">
+          <div class="scroller"></div>
+        </div>
+      </div>
     </section>
     <section id="intro" class "container">
       <div class="row">
         <section class="first">
           <div class="circle"></div>
           <header>
-            <h2>Designers who understand</h2>
+            <h2>DESIGNERS WHO EMPATHISE</h2>
           </header>
-          <p>We will bring you customer insights and will help you define your product strategy</p>
+          <p>We will bring you customer insights and will help you define your product strategy.</p>
         </section>
       </div>
       <section class="middle" <header>
         <div class="square"></div>
-        <h2>Smooth and flexible collaboration</h2>
+        <h2>SMOOTH & FLEXIBLE COLLABORATION</h2>
         </header>
         <p>We will be a part of your product team, adapt to your speed and work closely with your devs</p>
       </section>
       <section class="last" <header>
         <div class="circle2"></div>
-        <h2>We don't just research, we invent</h2>
+        <h2>WE'RE UNICORNS!</h2>
         </header>
         <p>We have an inhouse team able to turn your concept or idea to life, through research and design</p>
       </section>
     </section>
+    <div class="intro_contact"><a href="/">WHAT ARE YOU WAITING FOR?<br>GET TO KNOW US!</a></div>
     <footer>
-      <ul class="actions">
-        <li><a href="#" class="button big">Learn more about us</a></li>
-      </ul>
+      <section></section>
     </footer>
 
   </body>
