-Changes to html -Added new html pages -Changes css files

--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
         </div>
         <ul id="menu">
           <li><a href="#work">Work</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -38,58 +38,72 @@
     <div class="overlay-menu">
       <ul id="menu">
         <li><a class="a" href="#home">WORK</a></li>
-        <li><a class="a" href="#services">SERVICES</a></li>
-        <li><a class="a" href="#about">ABOUT</a></li>
+        <li><a class="a" href="services.html">SERVICES</a></li>
+        <li><a class="a" href="about.html">ABOUT</a></li>
         <li><a class="a" href="#contact">CONTACT</a></li>
       </ul>
     </div>
     </header>
-    <section class="banner">
-      <h1 class="hero">WE
-          <span style="color: #39DBFA">CREATE</span>
-          <span style="color: #FF2D5E">BEAUTIFUL,</span>
-          <span style="color: #82F927">INTUITIVE</span>
-          <br>DESIGNS AND EXPERIENCES.
-          <br><div class="banimg"><img src="images/tablets.svg"/></div></h1>
-    </section>
-    <section class="mouse">
-      <div class="shape"></div>
-      <div class="shape2"></div>
-      <div class="scroll-downs">
-        <div class="mousey">
-          <div class="scroller"></div>
+
+    <main>
+
+      <div class="banner_intro marginb-20rem">
+        <div class="banner_title">
+          <h1>WE CREATE BEAUTIFUL, INTUITIVE</h1>
+          <p>DESIGNS & EXPERIENCES</p>
+          <img class="banimg" src="images/tablets.svg" />
+          <div class="mouse"></div>
+          <div class="scroll-downs">
+            <div class="mousey ">
+              <div class="scroller "></div>
+            </div>
+          </div>
         </div>
       </div>
-    </section>
-    <section id="intro" class "container">
-      <div class="row">
-        <section class="first">
-          <div class="circle"></div>
-          <header>
-            <h2>DESIGNERS WHO EMPATHISE</h2>
-          </header>
-          <p>We will bring you customer insights and will help you define your product strategy.</p>
-        </section>
-      </div>
-      <section class="middle" <header>
-        <div class="square"></div>
-        <h2>SMOOTH & FLEXIBLE COLLABORATION</h2>
-        </header>
-        <p>We will be a part of your product team, adapt to your speed and work closely with your devs</p>
-      </section>
-      <section class="last" <header>
-        <div class="circle2"></div>
-        <h2>WE'RE UNICORNS!</h2>
-        </header>
-        <p>We have an inhouse team able to turn your concept or idea to life, through research and design</p>
-      </section>
-    </section>
-    <div class="intro_contact"><a href="/">WHAT ARE YOU WAITING FOR?<br>GET TO KNOW US!</a></div>
-    <footer>
-      <section></section>
-    </footer>
 
+      <div class="shape"></div>
+      <div class="shape2"></div>
+
+      <div class="info_main">
+        <div id="intro" class "container">
+          <div class="first">
+            <div class="circle"></div>
+            <h2>UX STRATEGY & DESIGN</h2>
+            <p class="info_ctn">It doesn’t matter what your site or app looks like if people don’t know how to interact with it. And moreover, they need to enjoy that interaction. We deal with every detail to improve the user experience. For instance the filling in of forms,
+              moving to further actions, clicking on buttons, transferring between screens and many other interactions.</p>
+          </div>
+          <div class="middle">
+            <div class="square"></div>
+            <h2>SMOOTH & FLEXIBLE COLLABORATION</h2>
+            <p class="info_ctn">We are a full-service UX agency, newly started in Melbourne, Australia. We have a huge network of friends that we collaborate with. We have friends in development, copy writers, business strategy and leadership. Here at Five Fifths we have
+              designers who want to work with you and your team to get the best outcome, we'll travel to you!</p>
+          </div>
+          <div class="last">
+            <div class="info_ctn"></div>
+            <h2>WE'RE UNICORNS!</h2>
+            <p class="info_ctn">We have an inhouse team able to turn your concept or idea to life, from conception to final delivery of strategy and design. Our designers are experts in their field. We'll tell it how it is, no BS. We're here to make a friend out of you not
+              just another job.</p>
+          </div>
+        </div>
+      </div>
+      <div class="intro_contact "><a href="/ ">WHAT ARE YOU WAITING FOR?<br>GET TO KNOW US!</a>
+        <div class="shape3 "></div>
+        <div class="shape4 "></div>
+      </div>
+      <footer class="footer_main ">
+        <div class="footer_1 ">
+          <div class="locale ">LOCATION</div>
+          <div class="lcx_locale ">AUSTRALIA</div>421 Lygon St, Brunswick East, 3057
+          <a href="https://goo.gl/tfQS8z " target="_blank "><button class="directions ">DIRECTIONS</button></a>
+          <div class="end ">Made with empathy © FiveFifths 2018 | Privacy Policy</div>
+        </div>
+        <div class="footer_2 ">
+          <div class="hire ">Want to work with us?</div>
+          <div class="hire2 "><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
+        </div>
+      </footer>
+    </main>
   </body>
-  <script src="js/index.js"></script>
+  <script src="js/index.js "></script>
 
 </html>
