Final Commit 4 launch - - reminder: Delete unwanted / old code.

--- a/src/about.html
+++ b/src/about.html
@@ -6,49 +6,135 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FiveFifths - About</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="//fonts.googleapis.com/css?family=Lato:100,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
   </head>
-  <nav id="navbar" class="">
-    <div class="nav-wrapper">
-      <div class="logo">
-        <a href="index.html"><img src="images/fflogo.svg"/></a>
-      </div>
-      <ul id="menu">
-        <li><a href="#work">Work</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
 
-  <!-- Menu Icon-->
-  <div class="menuIcon">
-    <span class="icon icon-bars"></span>
-    <span class="icon icon-bars overlay"></span>
-  </div>
 
-  <div class="overlay-menu">
-    <ul id="menu">
-      <li><a class="a" href="#home">WORK</a></li>
-      <li><a class="a" href="services.html">SERVICES</a></li>
-      <li><a class="a" href="#about">ABOUT</a></li>
-      <li><a class="a" href="#contact">CONTACT</a></li>
-    </ul>
-  </div>
-
-  <section class="banner">
-    <h1 class="hero">WHAT ABOUT US?<br>WE LOVE DAGS!
-        <br><div class="banimg"><img src="images/tablets.svg"/></div></h1>
-  </section>
 
   <body>
+    <nav id="navbar" class="">
+      <div class="nav-wrapper">
+        <div class="logo">
+          <a href="index.html"><img src="images/fflogo.svg"/></a>
+        </div>
+        <ul id="menu">
+          <li><a href="work.html">Work</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
 
+    <!-- Menu Icon-->
+    <div class="menuIcon">
+      <span class="icon icon-bars"></span>
+      <span class="icon icon-bars overlay"></span>
+    </div>
+
+    <div class="overlay-menu">
+      <ul id="menu">
+        <li><a class="a" href="index.html">HOME</a></li>
+        <li><a class="a" href="work.html">WORK</a></li>
+        <li><a class="a" href="services.html">SERVICES</a></li>
+        <li><a class="a" href="about.html">ABOUT</a></li>
+        <li><a class="a" href="contact.html">CONTACT</a></li>
+      </ul>
+    </div>
+    <main>
+      <div class="banner_intro marginb-20rem">
+        <div class="banner_title">
+          <div class="small_caps_header">ABOUT</div>
+          <h1>What about us?
+          <br>We're new. But we have talent</h1>
+          <p>We're not a scary bunch. We promise.</p>
+          <br>
+        </div>
+      </div>
+
+      <div class="shape7"></div>
+      <div class="shape8"></div>
+
+      <div class="quote_main">
+        <div class="intro_contact ">
+          <div class="team_ct ">Meet Five Fifths</div>
+        </div>
+      </div>
+
+      <div class="about_main marginb-20rem">
+        <div class="about_ct">
+          <div class="cut_ct marginc-5rem">
+            <div class="photo"><img class="allimg" src="images/jin.png" /></div>
+            <div class="abt_content">
+              <h2 class="abt_title">Jin-Sun Hwang</h2>
+              <h3>'Wonder Woman'</h3>
+              <p class="about_text">Jin is a UX Designer who likes combining creative thinking, research, best practices and identify new opportunities with innovative and intelligent design solutions</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="mid_ct marginc-5rem">
+          <div class="abt_content">
+            <h2 class="abt_title">Rodrigo Pesenti</h2>
+            <h3>'The Unicorn'</h3>
+            <p class="about_text">Rodrigo is a UX / UI Designer, with interaction design at his core. He loves to create amazing experiences for his audience and help businesses grow. In his spare time, he's an avid gamer, at times called to question his true career path as
+              a professional gamer. Loves his cat and car and is somewhat of goofy character.</p>
+          </div>
+          <div id="photo">
+            <img src="images/rod.png" class="bell" />
+            <div class="overlay"><img src="images/zarya.png" /></div>
+          </div>
+        </div>
+
+        <div class="cut_ct marginc-5rem">
+          <div class="photo"><img class="allimg" src="images/nick.png" /></div>
+          <div class="abt_content">
+            <h2 class="abt_title">Nick Montagu</h2>
+            <h3>'The Dreamer'</h3>
+            <p class="about_text">Nick loves to bring improvement into the working lives of our clients and his team. While often thinking outside of the box, he always pushes for strong collaborations to encourage others to think courageously. He loves to brainstorm, strategise,
+              ideate and mentor. In his downtime, he loves to go scuba diving, explore nature, romanticising his record collection or getting inspired at the cinema or museum.</p>
+          </div>
+        </div>
+      </div>
+      <div class="quote_main">
+        <div class="intro_contact ">
+          <div class="link_ct" <a href="contact.html">Get to know us!</a>
+          </div>
+        </div>
+        <div class="shape3 "></div>
+        <div class="shape4 "></div>
+      </div>
+
+    </main>
+    <footer class="footer_main ">
+      <div class="foot_ct">
+        <div class="footer_1 ">
+          <div class="locale ">Location</div>
+          <div class="lcx_locale ">Australia</div>
+          <div class="adr_lc">421 Lygon St, Brunswick East, 3057</div>
+          <a href="https://goo.gl/tfQS8z " target="_blank "><button class="directions ">Directions</button></a>
+          <div class="end ">Made with empathy © FiveFifths 2018 | Privacy Policy</div>
+        </div>
+        <div class="footer_2 ">
+          <div class="hire ">Interested to work with us?</div>
+          <div class="hire_line">
+            <p>Drop us an email. We'd love to hear about you</p>
+          </div>
+          <div class="hire2 "><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
+          <div class="social_icons">
+            <i class="fa fa-linkedin"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-behance"></i>
+          </div>
+        </div>
+    </footer>
   </body>
+
+  <script src="js/index.js"></script>
+  <script src="js/image.js"></script>
 
 </html>
