--- a/src/contact.html
+++ b/src/contact.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FiveFifths - Contact</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="//fonts.googleapis.com/css?family=Lato:100,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -19,10 +18,10 @@
         <a href="index.html"><img src="images/fflogo.svg"/></a>
       </div>
       <ul id="menu">
-        <li><a href="#work">Work</a></li>
+        <li><a href="work.html">Work</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -35,21 +34,64 @@
 
   <div class="overlay-menu">
     <ul id="menu">
-      <li><a class="a" href="#home">WORK</a></li>
+      <li><a class="a" href="index.html">HOME</a></li>
+      <li><a class="a" href="work.html">WORK</a></li>
       <li><a class="a" href="services.html">SERVICES</a></li>
-      <li><a class="a" href="#about">ABOUT</a></li>
-      <li><a class="a" href="#contact">CONTACT</a></li>
+      <li><a class="a" href="about.html">ABOUT</a></li>
+      <li><a class="a" href="contact.html">CONTACT</a></li>
     </ul>
   </div>
 
-  <section class="banner">
-    <div class="headline_title" style="transform: translate3d(-50%, -161.26px, 0px);">GET IN TOUCH<br>LET'S MAKE WONDERS TOGETHER</div>
-    <div class="banimg"><img src="https://vignette.wikia.nocookie.net/fruity1799/images/6/6e/Pogchamp.jpg/revision/latest?cb=20170608051958" /></div>
-    </h1>
-  </section>
-
   <body>
+    <main>
+      <div class="banner_intro marginb-20rem">
+        <div class="banner_title">
+          <div class="small_caps_header">CONTACT</div>
+          <h1>Let's work together!
+          <br>We love designing</h1>
+          <p>It's true. We do!</p>
+        </div>
+      </div>
 
+      <div class="shape5"></div>
+      <div class="shape6"></div>
+
+      <div class="about_para marginc-5rem">
+        <p>We're easily accessible. Drop by to have a chat, or send us an email. Remember to to add all your details. It's important to note what your project is. So we can grasp the idea and get back to you with a quote. Plus, quote is free!</p>
+      </div>
+
+      <div class="email marginb-20rem">
+        <h2>Email us --></h2>
+        <div class="email_hover">
+          <h1><a href="mailto:hello@fivefiths.com.au?Subject=ProjectScope!">hello@fivefifths.com.au</a></h1></div>
+        <p>Remember to include your name, phone number, company and what your project is about!</p>
+      </div>
+
+    </main>
+    <footer class="footer_main ">
+      <div class="foot_ct">
+        <div class="footer_1 ">
+          <div class="locale ">Location</div>
+          <div class="lcx_locale ">Australia</div>
+          <div class="adr_lc">421 Lygon St, Brunswick East, 3057</div>
+          <a href="https://goo.gl/tfQS8z " target="_blank "><button class="directions ">Directions</button></a>
+          <div class="end ">Made with empathy © FiveFifths 2018 | Privacy Policy</div>
+        </div>
+        <div class="footer_2 ">
+          <div class="hire ">Interested to work with us?</div>
+          <div class="hire_line">
+            <p>Drop us an email. We'd love to hear about you</p>
+          </div>
+          <div class="hire2 "><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
+          <div class="social_icons">
+            <i class="fa fa-linkedin"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-behance"></i>
+          </div>
+        </div>
+    </footer>
   </body>
+
+  <script src="js/index.js"></script>
 
 </html>
