--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FiveFifths - UX Agency</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="//fonts.googleapis.com/css?family=Lato:100,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -21,7 +20,7 @@
           <a href="/"><img src="images/fflogo.svg"/></a>
         </div>
         <ul id="menu">
-          <li><a href="#work">Work</a></li>
+          <li><a href="work.html">Work</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -37,10 +36,11 @@
 
     <div class="overlay-menu">
       <ul id="menu">
-        <li><a class="a" href="#home">WORK</a></li>
+        <li><a class="a" href="index.html">HOME</a></li>
+        <li><a class="a" href="work.html">WORK</a></li>
         <li><a class="a" href="services.html">SERVICES</a></li>
         <li><a class="a" href="about.html">ABOUT</a></li>
-        <li><a class="a" href="#contact">CONTACT</a></li>
+        <li><a class="a" href="contact.html">CONTACT</a></li>
       </ul>
     </div>
     </header>
@@ -49,60 +49,83 @@
 
       <div class="banner_intro marginb-20rem">
         <div class="banner_title">
-          <h1>WE CREATE BEAUTIFUL, INTUITIVE</h1>
-          <p>DESIGNS & EXPERIENCES</p>
+          <h1>We
+          <br>design
+          <br>unique, elegant experiences.</h1>
+          <p>Always with heart.</p>
           <img class="banimg" src="images/tablets.svg" />
-          <div class="mouse"></div>
-          <div class="scroll-downs">
-            <div class="mousey ">
-              <div class="scroller "></div>
-            </div>
-          </div>
         </div>
       </div>
+      <!-- <div class="mouse">
+        <div class="scroll-downs">
+          <div class="mousey ">
+            <div class="scroller "></div>
+          </div>
+        </div>
+      </div> -->
+
 
       <div class="shape"></div>
       <div class="shape2"></div>
 
-      <div class="info_main">
+      <div class="unsplash marginb-20rem"><img class="unsplash_image" src="images/sabrituzcu.jpg" alt="Sabri Tuzcu" />
+        <div class="unsplash_title">
+          <h1 class="unsplash_h1">We care about process</h1>
+          <p class="unsplash_p">tag line - - tag line</p>
+        </div>
+      </div>
+      <div class="info_main marginb-20rem">
         <div id="intro" class "container">
           <div class="first">
             <div class="circle"></div>
-            <h2>UX STRATEGY & DESIGN</h2>
-            <p class="info_ctn">It doesn’t matter what your site or app looks like if people don’t know how to interact with it. And moreover, they need to enjoy that interaction. We deal with every detail to improve the user experience. For instance the filling in of forms,
-              moving to further actions, clicking on buttons, transferring between screens and many other interactions.</p>
+            <h2>Heading 1</h2>
+            <p class="info_ctn">What makes FiveFifths different? What do we want to focus on?</p>
           </div>
           <div class="middle">
             <div class="square"></div>
-            <h2>SMOOTH & FLEXIBLE COLLABORATION</h2>
-            <p class="info_ctn">We are a full-service UX agency, newly started in Melbourne, Australia. We have a huge network of friends that we collaborate with. We have friends in development, copy writers, business strategy and leadership. Here at Five Fifths we have
-              designers who want to work with you and your team to get the best outcome, we'll travel to you!</p>
+            <h2>Heading 2</h2>
+            <p class="info_ctn">What does FiveFifths do different? How can we stand out from our competitors?</p>
           </div>
           <div class="last">
-            <div class="info_ctn"></div>
-            <h2>WE'RE UNICORNS!</h2>
-            <p class="info_ctn">We have an inhouse team able to turn your concept or idea to life, from conception to final delivery of strategy and design. Our designers are experts in their field. We'll tell it how it is, no BS. We're here to make a friend out of you not
-              just another job.</p>
+            <div class="circle2"></div>
+            <h2>Header 3</h2>
+            <p class="info_ctn">What can FiveFifths do for your business? What do we offer paraphrased?</p>
           </div>
         </div>
       </div>
-      <div class="intro_contact "><a href="/ ">WHAT ARE YOU WAITING FOR?<br>GET TO KNOW US!</a>
+      <div class="quote_main">
+        <div class="intro_contact ">
+          <div class="link_ct" <a href="contact.html">Get to know us!</a>
+          </div>
+        </div>
         <div class="shape3 "></div>
         <div class="shape4 "></div>
       </div>
-      <footer class="footer_main ">
+
+    </main>
+
+    <footer class="footer_main ">
+      <div class="foot_ct">
         <div class="footer_1 ">
-          <div class="locale ">LOCATION</div>
-          <div class="lcx_locale ">AUSTRALIA</div>421 Lygon St, Brunswick East, 3057
-          <a href="https://goo.gl/tfQS8z " target="_blank "><button class="directions ">DIRECTIONS</button></a>
+          <div class="locale ">Location</div>
+          <div class="lcx_locale ">Australia</div>
+          <div class="adr_lc">421 Lygon St, Brunswick East, 3057</div>
+          <a href="https://goo.gl/tfQS8z " target="_blank "><button class="directions ">Directions</button></a>
           <div class="end ">Made with empathy © FiveFifths 2018 | Privacy Policy</div>
         </div>
         <div class="footer_2 ">
-          <div class="hire ">Want to work with us?</div>
+          <div class="hire ">Interested to work with us?</div>
+          <div class="hire_line">
+            <p>Drop us an email. We'd love to hear about you</p>
+          </div>
           <div class="hire2 "><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
+          <div class="social_icons">
+            <i class="fa fa-linkedin"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-behance"></i>
+          </div>
         </div>
-      </footer>
-    </main>
+    </footer>
   </body>
   <script src="js/index.js "></script>
 
