--- a/src/services.html
+++ b/src/services.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FiveFifths - Services</title>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="//fonts.googleapis.com/css?family=Lato:100,700" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -21,7 +20,7 @@
           <a href="index.html"><img src="images/fflogo.svg"/></a>
         </div>
         <ul id="menu">
-          <li><a href="#work">Work</a></li>
+          <li><a href="work.html">Work</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -37,64 +36,129 @@
 
     <div class="overlay-menu">
       <ul id="menu">
-        <li><a class="a" href="#home">WORK</a></li>
+        <li><a class="a" href="index.html">HOME</a></li>
+        <li><a class="a" href="work.html">WORK</a></li>
         <li><a class="a" href="services.html">SERVICES</a></li>
         <li><a class="a" href="about.html">ABOUT</a></li>
         <li><a class="a" href="contact.html">CONTACT</a></li>
       </ul>
     </div>
 
-    <section class="servicesbanner">
-      <h1 class="hero2">WE'RE ABOUT CREATING
-          <br>MEMORABLE DESIGNS AND EXPERIENCES</h1>
+    <main>
+      <div class="servicesbanner marginb-20rem">
+        <div class="banner_title">
+          <div class="small_caps_header">SERVICES</div>
+          <h1>It's about
+          <br>web and design for us</h1>
+          <p>Everything matters.</p>
+        </div>
+      </div>
       <div class="shape"></div>
       <div class="shape2"></div>
-    </section>
-    <section id="sxcontainer" class "container">
-      <section class="sxcontent">
-        <div class="sx1">
-          <h2>SERVICES</h2>
-          <p>We are a team of UX Designers ready to meet your needs and the needs of your users. We specialise in research all the way to design. Need that vision turned into a reality? We deliver unique and creative design solutions.</p>
+
+      <div class="service_para marginc-5rem">
+        <p>Your website is your home. It should be beautifully designed, functional and easy to renovate. It should also be full of compelling, entertaining content, but we'll get to that in a minute.</p>
+      </div>
+      <div class="info_main marginb-20rem">
+        <div id="intro" class "container">
+          <div class="first">
+            <div class="circle"></div>
+            <h2>Websites</h2>
+            <p class="info_ctn">We build responsive, performant websites filled with content that converts.</p>
+          </div>
+          <div class="middle">
+            <div class="square"></div>
+            <h2>UX-Design</h2>
+            <p class="info_ctn">
+              User Experience (UX) We ensure our digital experiences are simple, functional, accessible and delightful.
+            </p>
+          </div>
+          <div class="last">
+            <div class="circle2"></div>
+            <h2>SEO</h2>
+            <p class="info_ctn">
+              Search Engine Optimisation (SEO) We wrap compelling content in semantic smarts that humans and search engines love.
+            </p>
+          </div>
         </div>
-        <div class="sx2">
-          <h2>CAPABILITIES</h2>
-          <ul class="skills">
-            <li>Stakeholder Interviews</li>
-            <li>User Interviews</li>
-            <li>Contextual Inquiries</li>
-            <li>Competitive Analysis</li>
-            <br>
-            <li>User Personas</li>
-            <li>User Flows</li>
-            <li>Information Architecture</li>
-            <li>Sitemap</li>
-            <li>Strategic Assessement</li>
-            <br>
-            <li>Sketching</li>
-            <li>Interaction design</li>
-            <li>Lo & hi-fi wireframes</li>
-            <li>Prototyping</li>
-            <li>Usability testing & iterative design</li>
-          </ul>
+        <div id="intro" class "container">
+          <div class="first">
+            <div class="circle"></div>
+            <h2>Analytics & Reporting</h2>
+            <p class="info_ctn">Get a better understanding of your key audience and their behaviours.</p>
+          </div>
+          <div class="middle">
+            <div class="square"></div>
+            <h2>Strategy</h2>
+            <p class="info_ctn">We don't just create content. We plan, deliver, analyse and evolve it. Your browser does not support video BIGSOUND 2017 Content + Website
+            </p>
+          </div>
+          <div class="last">
+            <div class="circle2"></div>
+            <h2>We're unicorns</h2>
+            <p class="info_ctn">Our designers specialise in interface design. Turning your ideas into reality with elegance</p>
+          </div>
         </div>
-      </section>
-    </section>
-    <section>
-      <div class="intro_contact"><a href="/">WHAT ARE YOU WAITING FOR?<br>GET TO KNOW US!</a>
-        <div class="shape3"></div>
-        <div class="shape4"></div>
-    </section>
-    <footer class="footer_main">
-      <section class="footer_1">
-        <div class="locale">LOCATION</div>
-        <div class="lcx_locale">AUSTRALIA</div>421 Lygon St, Brunswick East, 3057
-        <a href="https://goo.gl/tfQS8z" target="_blank"><button class="directions">DIRECTIONS</button></a>
-        <div class="end">Made with empathy © FiveFifths 2018 | Privacy Policy</div>
-      </section>
-      <section class="footer_2">
-        <div class="hire">Want to work with us?</div>
-        <div class="hire2"><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest!">hello@fivefifths.com.au</a></div>
-      </section>
+      </div>
+
+      <div class="service_para marginc-5rem">
+        <p>We are a team of UX Designers ready to meet your needs and the needs of your users. We specialise in research all the way to design. Need that vision turned into a reality? We deliver unique and creative design solutions.</p>
+      </div>
+      <div class="service_flex_row marginc-5rem">
+        <h2>CAPABILITIES</h2></div>
+      <div class="skills_container marginb-20rem">
+        <ul class="skills">
+          <li>Stakeholder Interviews</li>
+          <li>User Interviews</li>
+          <li>Contextual Inquiries</li>
+          <li>Competitive Analysis</li>
+        </ul>
+        <ul class="skills">
+          <li>User Personas</li>
+          <li>User Flows</li>
+          <li>Information Architecture</li>
+          <li>Sitemap</li>
+          <li>Strategic Assessement</li>
+        </ul>
+        <ul class="skills">
+          <li>Sketching</li>
+          <li>Interaction design</li>
+          <li>Lo & hi-fi wireframes</li>
+          <li>Prototyping</li>
+          <li>Usability testing & iterative design</li>
+        </ul>
+      </div>
+      <div class="quote_main">
+        <div class="intro_contact ">
+          <div class="link_ct" <a href="contact.html">Get to know us!</a>
+          </div>
+        </div>
+        <div class="shape3 "></div>
+        <div class="shape4 "></div>
+      </div>
+    </main>
+
+    <footer class="footer_main ">
+      <div class="foot_ct">
+        <div class="footer_1 ">
+          <div class="locale ">Location</div>
+          <div class="lcx_locale ">Australia</div>
+          <div class="adr_lc">421 Lygon St, Brunswick East, 3057</div>
+          <a href="https://goo.gl/tfQS8z " target="_blank "><button class="directions ">Directions</button></a>
+          <div class="end ">Made with empathy © FiveFifths 2018 | Privacy Policy</div>
+        </div>
+        <div class="footer_2 ">
+          <div class="hire ">Interested to work with us?</div>
+          <div class="hire_line">
+            <p>Drop us an email. We'd love to hear about you</p>
+          </div>
+          <div class="hire2 "><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
+          <div class="social_icons">
+            <i class="fa fa-linkedin"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-behance"></i>
+          </div>
+        </div>
     </footer>
   </body>
 
