- Updated links/ changes to code (mail links) - changed email to hello@fivefifths.com.au

--- a/src/work.html
+++ b/src/work.html
@@ -73,7 +73,7 @@
           <div class="hire_line">
             <p>Drop us an email. We'd love to hear about you</p>
           </div>
-          <div class="hire2 "><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
+          <div class="hire2 "><a href="mailto:hello@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
           <div class="social_icons">
             <i class="fa fa-linkedin"></i>
             <i class="fa fa-facebook"></i>
