--- a/src/services.html
+++ b/src/services.html
@@ -130,7 +130,7 @@
       </div>
       <div class="quote_main">
         <div class="intro_contact ">
-          <div class="link_ct" <a href="contact.html">Get to know us!</a>
+          <div class="link_ct"> <a href="contact.html">Get to know us!</a>
           </div>
         </div>
         <div class="shape3 "></div>
@@ -152,7 +152,7 @@
           <div class="hire_line">
             <p>Drop us an email. We'd love to hear about you</p>
           </div>
-          <div class="hire2 "><a href="mailto:rodrigo.pesenti@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
+          <div class="hire2 "><a href="mailto:hello@fivefifths.com.au?Subject=Interest! ">hello@fivefifths.com.au</a></div>
           <div class="social_icons">
             <i class="fa fa-linkedin"></i>
             <i class="fa fa-facebook"></i>
